# job-service/src/main/java/com/hpe/caf/services/job/api/generated/JobsApi.java
@@ -158,11 +158,14 @@ public class JobsApi  {
 
     public Response cancelJobs(
             @ApiParam(value = "Only allow access to jobs in the container with this name", required = true) @PathParam("partitionId") String partitionId,
-            @ApiParam(value = "List of Job IDs to cancel", required = false) List<String> jobIds,
+            @ApiParam(value = "Only those results whose job id starts with this value will be returned") @QueryParam("jobIdStartsWith") String jobIdStartsWith,
+            @ApiParam(value = "All - no status filter is applied (Default); NotCompleted - only those results with statuses other than Completed will be returned; Completed - only those results with Completed status will be returned; Inactive - only those results with inactive statuses (i.e. Completed, Failed, Cancelled) will be returned; NotFinished - only those results with unfinished statuses (ie. Active, Paused, Waiting) will be returned.") @QueryParam("statusType") String statusType,
+            @ApiParam(value = "Filter jobs with any of the specified labels, in the format label=<labelName>,<labelName>") @QueryParam("labelExist") String label,
             @ApiParam(value = "Filter jobs with the specified filter criteria") @QueryParam("filter") String filter,
-            @ApiParam(value = "An identifier that can be used to correlate events that occurred\nacross different CAF services" ) @HeaderParam("CAF-Correlation-Id") String cAFCorrelationId, @Context SecurityContext securityContext)
+            @ApiParam(value = "An identifier that can be used to correlate events that occurred\nacross different CAF services" ) @HeaderParam("CAF-Correlation-Id") String cAFCorrelationId,
+            @Context SecurityContext securityContext)
             throws Exception {
-        return delegate.cancelJobs(partitionId, jobIds, filter, cAFCorrelationId, securityContext);
+        return delegate.cancelJobs(partitionId, jobIdStartsWith, statusType, label, filter, cAFCorrelationId, securityContext);
     }
 
     @POST
