# job-service/src/main/java/com/hpe/caf/services/job/api/generated/JobsApiService.java
@@ -42,9 +42,8 @@ public abstract class JobsApiService {
 
       public abstract Response cancelJob(String partitionId,String jobId,String cAFCorrelationId,SecurityContext securityContext)
               throws Exception;
-
-      public abstract Response cancelJobs(String partitionId, List<String> jobIds, String filter, String cAFCorrelationId,SecurityContext securityContext)
-            throws Exception;
+      public abstract Response cancelJobs(String partitionId, final String jobIdStartsWith, final String statusType, String label, final String filter,
+                                          String cAFCorrelationId, SecurityContext securityContext) throws Exception;
 
       public abstract Response pauseJob(String partitionId, String jobId, String cAFCorrelationId, SecurityContext securityContext)
               throws Exception;
